# ex

./: .gitignore  CMakeLists.txt
.github/workflows/: build-release.yml  build.yml
src/: main.cpp  mesh.cpp  mesh.hpp  shaders.cpp  shaders.hpp  util.cpp  util.hpp
src/shaders/: config.json  fstr.vert  map_tile.frag  tile.vert
